# building-random-x-from-scratch

./: .eslintrc  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
blockchain/creating_a_blockchain_from_scratch/: README.md  block.py  blockchain.py  main.py
blockchain/learn_blockchains_by_building_one/: blockchain.py
blockchain/lets_build_the_tiniest_blockchain/: README.md  block.py  chain.py  genesis.py  new_block.py  txion-pow.py
blockchain/python/learn_blockchains_by_building_one/: README.md
programming_languages/a_python_interpreter_written_in_python/: README.md
programming_languages/a_python_interpreter_written_in_python/byterun/: Function.py
programming_languages/build_your_own_webassembly_compiler/: README.md  tsconfig.json
programming_languages/build_your_own_webassembly_compiler/src/: compiler.ts  interpreter.ts
programming_languages/lisp.py/: example.lisp  lisp.py
programming_languages/python/a_python_interpreter_written_in_python/: interpreter.py
programming_languages/python/lisp.py/: README.md
programming_languages/textx_simple_lang/: README.md  bsp.c3  layout.mmap  linux.asm
programming_languages/the_super_tiny_compiler/: README.md  compiler.ts  package.json  tokenizer.ts  tsconfig.json
programming_languages/writing_a_markdown_compiler/: README.md  main.py  scanner.py  tokenizer.py
shell/build_your_own_shell_using_rust/: Cargo.toml  README.md
templating_engine/javascript_template_engine_in_just_20_lines/: README.md  tsconfig.json
web_server/a_simple_web_server/: README.md  cgi.py
(+47 files in other folders)
