[tool.poetry]
name = "textx_simple_lang"
version = "0.1.0"
description = ""
authors = ["chen <23054115+cwkang1998@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
textX = "^2.3.0"
ppci = "^0.5.8"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
